fix: tickets widget cart message sequence and auth UI alignment

--- a/app/eventyay/static/pretixcontrol/scss/auth.scss
+++ b/app/eventyay/static/pretixcontrol/scss/auth.scss
@@ -97,7 +97,7 @@ footer {
 }
 
 .container > .alert {
-    max-width: 330px;
+    max-width: 420px;
     margin: auto;
     margin-bottom: 20px;
 }
